--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,10 +1,5 @@
 <h1>タスクの追加ページ</h1>
 
-<%= form_with(model: @task, local: true) do |f| %>
-  <%= f.label :content, 'タスク' %>
-  <%= f.text_field :content %>
-  
-  <%= f.submit '追加' %>
-<% end %>
+<%= render 'form', task: @task %>
 
 <%= link_to '一覧の戻る', tasks_path %>
